# DAI-Vera-a.12.1.l

./: DAI_Workflow_Module_Documentation.md  DAI_Workflow_User_Manual.md  README.md
DAI-Vera-main-2/: .gitignore  BRANCHGUI.mlapp  BREAKERGUI.mlapp  DAI - Vera.mlappinstall  DAI - Vera.prj  DAI - Wing.mlappinstall  DAIVeraApp.m  DCTFFRGUI.mlapp  DCTFFRGUI.txt  DiagnosticReport.xlsx  ImportLesionPointsButtonPushed_LockBased.m  STENOSISGUI.mlapp  STENOSISGUI.txt  WING.mlapp  WING.txt  acquireLock.m  bChangeViewMode.m  brChangeViewMode.m  buildPlot.m  calculateFFR.m  calculateStenosisRatio.m  callCustomInputDialog.m  captureScreen.m  changeFontsTo.m  changeViewMode.m  checkLock.m  convertDocxToPdf.m  convertImagesToJpeg.m  dai_slicer_lock.txt  dicom_dict_copy.txt  drawCurve.m  drawFFRCurve.m  exportCurves.m  exportFFRCurve.m  extract_sl.m  findBaseline.m  fitModifiedGammaVariate.m  generateDetailsReport.m  generateFileName.m  generateReport.m  (+80 more)
DAI-Vera-main-2/Documents/: Architecture Document.docx  FlowChart.pptx  User Manual.docx
DAI-Vera-main-2/application_manager/: app_paths.m  constants.h  download.c  main.c
SlicerWorkflowExt-main/: .gitignore  DAI_Workflow_Module_Documentation.md  DAI_Workflow_User_Manual.md  README.md  start.ps1
SlicerWorkflowExt-main/DAI_Workflow/: CMakeLists.txt  source_slicer.txt
SlicerWorkflowExt-main/DAI_Workflow/workflow/: CMakeLists.txt  workflow.py
SlicerWorkflowExt-main/DAI_Workflow/workflow/Moduals/: workflow_moduals.py  workflow_test_functions.py
SlicerWorkflowExt-main/DAI_Workflow/workflow/Resources/UI/: workflow.ui
(+10 files in other folders)
